REOPENED280371
REGRESSION(282394@main): [ Ventura ] Flaky ASSERTION FAILED: !users.contains(pageID) on TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations
https://bugs.webkit.org/show_bug.cgi?id=280371
Summary REGRESSION(282394@main): [ Ventura ] Flaky ASSERTION FAILED: !users.contains(...
Dawn Morningstar
Reported 2024-09-25 16:59:42 PDT
TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations Is a near constant assert on Ventura Debug since 282394@main. History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations Test-run: https://build.webkit.org/#/builders/704/builds/7073 build.webkit is currently timing out, will attach assert as soon as the page loads.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-25 17:00:27 PDT
Dawn Morningstar
Comment 2 2024-09-25 17:09:01 PDT
TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations ASSERTION FAILED: !users.contains(pageID) /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/WebKit/UIProcess/WebProcessProxy.cpp(895) : void WebKit::WebProcessProxy::addVisitedLinkStoreUser(WebKit::VisitedLinkStore &, WebKit::WebPageProxyIdentifier) 1 0x2c487e4d0 WebKit::WebProcessProxy::addVisitedLinkStoreUser(WebKit::VisitedLinkStore&, WTF::ObjectIdentifierGeneric<WebKit::WebPageProxyIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)1>) 2 0x2c445de30 WebKit::ProvisionalPageProxy::initializeWebPage(WTF::RefPtr<API::WebsitePolicies, WTF::RawPtrTraits<API::WebsitePolicies>, WTF::DefaultRefDerefTraits<API::WebsitePolicies>>&&) 3 0x2c445d2d4 WebKit::ProvisionalPageProxy::ProvisionalPageProxy(WebKit::WebPageProxy&, WTF::Ref<WebKit::FrameProcess, WTF::RawPtrTraits<WebKit::FrameProcess>, WTF::DefaultRefDerefTraits<WebKit::FrameProcess>>&&, WebKit::BrowsingContextGroup&, std::__1::unique_ptr<WebKit::SuspendedPageProxy, std::__1::default_delete<WebKit::SuspendedPageProxy>>, API::Navigation&, bool, WebCore::ResourceRequest const&, WebKit::ProcessSwapRequestedByClient, bool, API::WebsitePolicies*, WebKit::WebsiteDataStore*) 4 0x2c445df4c WebKit::ProvisionalPageProxy::ProvisionalPageProxy(WebKit::WebPageProxy&, WTF::Ref<WebKit::FrameProcess, WTF::RawPtrTraits<WebKit::FrameProcess>, WTF::DefaultRefDerefTraits<WebKit::FrameProcess>>&&, WebKit::BrowsingContextGroup&, std::__1::unique_ptr<WebKit::SuspendedPageProxy, std::__1::default_delete<WebKit::SuspendedPageProxy>>, API::Navigation&, bool, WebCore::ResourceRequest const&, WebKit::ProcessSwapRequestedByClient, bool, API::WebsitePolicies*, WebKit::WebsiteDataStore*) 5 0x2c46bdea8 std::__1::__unique_if<WebKit::ProvisionalPageProxy>::__unique_single std::__1::make_unique[abi:v15006]<WebKit::ProvisionalPageProxy, WebKit::WebPageProxy&, WTF::Ref<WebKit::FrameProcess, WTF::RawPtrTraits<WebKit::FrameProcess>, WTF::DefaultRefDerefTraits<WebKit::FrameProcess>>, WTF::Ref<WebKit::BrowsingContextGroup, WTF::RawPtrTraits<WebKit::BrowsingContextGroup>, WTF::DefaultRefDerefTraits<WebKit::BrowsingContextGroup>>, std::__1::unique_ptr<WebKit::SuspendedPageProxy, std::__1::default_delete<WebKit::SuspendedPageProxy>>, API::Navigation&, bool&, WebCore::ResourceRequest const&, WebKit::ProcessSwapRequestedByClient&, bool&, API::WebsitePolicies*, WebKit::WebsiteDataStore*&>(WebKit::WebPageProxy&, WTF::Ref<WebKit::FrameProcess, WTF::RawPtrTraits<WebKit::FrameProcess>, WTF::DefaultRefDerefTraits<WebKit::FrameProcess>>&&, WTF::Ref<WebKit::BrowsingContextGroup, WTF::RawPtrTraits<WebKit::BrowsingContextGroup>, WTF::DefaultRefDerefTraits<WebKit::BrowsingContextGroup>>&&, std::__1::unique_ptr<WebKit::SuspendedPageProxy, std::__1::default_delete<WebKit::SuspendedPageProxy>>&&, API::Navigation&, bool&, WebCore::ResourceRequest const&, WebKit::ProcessSwapRequestedByClient&, bool&, API::WebsitePolicies*&&, WebKit::WebsiteDataStore*&) 6 0x2c464ffe8 decltype(auto) WTF::makeUnique<WebKit::ProvisionalPageProxy, WebKit::WebPageProxy&, WTF::Ref<WebKit::FrameProcess, WTF::RawPtrTraits<WebKit::FrameProcess>, WTF::DefaultRefDerefTraits<WebKit::FrameProcess>>, WTF::Ref<WebKit::BrowsingContextGroup, WTF::RawPtrTraits<WebKit::BrowsingContextGroup>, WTF::DefaultRefDerefTraits<WebKit::BrowsingContextGroup>>, std::__1::unique_ptr<WebKit::SuspendedPageProxy, std::__1::default_delete<WebKit::SuspendedPageProxy>>, API::Navigation&, bool&, WebCore::ResourceRequest const&, WebKit::ProcessSwapRequestedByClient&, bool&, API::WebsitePolicies*, WebKit::WebsiteDataStore*&>(WebKit::WebPageProxy&, WTF::Ref<WebKit::FrameProcess, WTF::RawPtrTraits<WebKit::FrameProcess>, WTF::DefaultRefDerefTraits<WebKit::FrameProcess>>&&, WTF::Ref<WebKit::BrowsingContextGroup, WTF::RawPtrTraits<WebKit::BrowsingContextGroup>, WTF::DefaultRefDerefTraits<WebKit::BrowsingContextGroup>>&&, std::__1::unique_ptr<WebKit::SuspendedPageProxy, std::__1::default_delete<WebKit::SuspendedPageProxy>>&&, API::Navigation&, bool&, WebCore::ResourceRequest const&, WebKit::ProcessSwapRequestedByClient&, bool&, API::WebsitePolicies*&&, WebKit::WebsiteDataStore*&) 7 0x2c464fb78 WebKit::WebPageProxy::continueNavigationInNewProcess(API::Navigation&, WebKit::WebFrameProxy&, std::__1::unique_ptr<WebKit::SuspendedPageProxy, std::__1::default_delete<WebKit::SuspendedPageProxy>>&&, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::ProcessSwapRequestedByClient, WebCore::ShouldTreatAsContinuingLoad, std::__1::optional<WTF::ObjectIdentifierGeneric<WebKit::NetworkResourceLoadIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)1>>, WebKit::LoadedWebArchive, WebCore::IsPerformingHTTPFallback, WebKit::WebsiteDataStore*) 8 0x2c471161c WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation*, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, WTF::URL const&, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_61::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 9 0x2c4710c14 WTF::Detail::CallableWrapper<WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation*, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, WTF::URL const&, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_61, void, WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral>::call(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 10 0x2c4865df0 WTF::Function<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) const 11 0x2c4821284 WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>::operator()(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral) 12 0x2c48671f8 WebKit::WebProcessPool::prepareProcessForNavigation(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebPageProxy&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral, WebCore::RegistrableDomain const&, API::Navigation const&, WebKit::WebProcessProxy::LockdownMode, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&, unsigned int)::$_50::operator()(WebKit::SuspendedPageProxy*) 13 0x2c4866fb4 WebKit::WebProcessPool::prepareProcessForNavigation(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebPageProxy&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral, WebCore::RegistrableDomain const&, API::Navigation const&, WebKit::WebProcessProxy::LockdownMode, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&, unsigned int)::$_51::operator()() 14 0x2c4866e10 WTF::Detail::CallableWrapper<WebKit::WebProcessPool::prepareProcessForNavigation(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebPageProxy&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral, WebCore::RegistrableDomain const&, API::Navigation const&, WebKit::WebProcessProxy::LockdownMode, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&, unsigned int)::$_51, void>::call() 15 0x2c242d7a8 WTF::Function<void ()>::operator()() const 16 0x2c2c3233c WTF::CompletionHandler<void ()>::operator()() 17 0x2c4b59538 WebKit::NetworkProcessProxy::addAllowedFirstPartyForCookies(WebKit::WebProcessProxy&, WebCore::RegistrableDomain const&, WebKit::LoadedWebArchive, WTF::CompletionHandler<void ()>&&) 18 0x2c4822bec WebKit::WebProcessPool::prepareProcessForNavigation(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebPageProxy&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral, WebCore::RegistrableDomain const&, API::Navigation const&, WebKit::WebProcessProxy::LockdownMode, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&, unsigned int) 19 0x2c482116c WebKit::WebProcessPool::processForNavigation(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, API::Navigation const&, WTF::URL const&, WebKit::ProcessSwapRequestedByClient, WebKit::WebProcessProxy::LockdownMode, WebKit::FrameInfoData const&, WTF::Ref<WebKit::WebsiteDataStore, WTF::RawPtrTraits<WebKit::WebsiteDataStore>, WTF::DefaultRefDerefTraits<WebKit::WebsiteDataStore>>&&, WTF::CompletionHandler<void (WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::SuspendedPageProxy*, WTF::ASCIILiteral)>&&) 20 0x2c464c0c8 WebKit::WebPageProxy::receivedNavigationActionPolicyDecision(WebKit::WebProcessProxy&, WebCore::PolicyAction, API::Navigation*, WTF::Ref<API::NavigationAction, WTF::RawPtrTraits<API::NavigationAction>, WTF::DefaultRefDerefTraits<API::NavigationAction>>&&, WebKit::ProcessSwapRequestedByClient, WebKit::WebFrameProxy&, WebKit::FrameInfoData const&, WebKit::WasNavigationIntercepted, WTF::URL const&, std::__1::optional<WebKit::PolicyDecisionConsoleMessage>&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&) 21 0x2c4746248 WebKit::WebPageProxy::decidePolicyForNavigationAction(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebFrameProxy&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_91::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)::'lambda'(WebCore::PolicyAction)::operator()(WebCore::PolicyAction) 22 0x2c4745e78 WebKit::WebPageProxy::decidePolicyForNavigationAction(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebFrameProxy&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_91::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 23 0x2c47455a4 WTF::Detail::CallableWrapper<WebKit::WebPageProxy::decidePolicyForNavigationAction(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy>, WTF::DefaultRefDerefTraits<WebKit::WebProcessProxy>>&&, WebKit::WebFrameProxy&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (WebKit::PolicyDecision&&)>&&)::$_91, void, WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted>::call(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 24 0x2c45b8194 WTF::Function<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) const 25 0x2c45a890c WTF::CompletionHandler<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 26 0x2c45bd650 WebKit::WebFrameProxy::setUpPolicyListenerProxy(WTF::CompletionHandler<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>&&, WebKit::ShouldExpectSafeBrowsingResult, WebKit::ShouldExpectAppBoundDomainResult, WebKit::ShouldWaitForInitialLinkDecorationFilteringData)::$_2::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 27 0x2c45bd43c WTF::Detail::CallableWrapper<WebKit::WebFrameProxy::setUpPolicyListenerProxy(WTF::CompletionHandler<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>&&, WebKit::ShouldExpectSafeBrowsingResult, WebKit::ShouldExpectAppBoundDomainResult, WebKit::ShouldWaitForInitialLinkDecorationFilteringData)::$_2, void, WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted>::call(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 28 0x2c45b8194 WTF::Function<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) const 29 0x2c45a890c WTF::CompletionHandler<void (WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted)>::operator()(WebCore::PolicyAction, API::WebsitePolicies*, WebKit::ProcessSwapRequestedByClient, WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&, std::__1::optional<WebKit::NavigatingToAppBoundDomain>, WebKit::WasNavigationIntercepted) 30 0x2c45a8218 WebKit::WebFramePolicyListenerProxy::didReceiveSafeBrowsingResults(WTF::RefPtr<WebKit::BrowsingWarning, WTF::RawPtrTraits<WebKit::BrowsingWarning>, WTF::DefaultRefDerefTraits<WebKit::BrowsingWarning>>&&) 31 0x2c416b730 WebKit::WebPageProxy::beginSafeBrowsingCheck(WTF::URL const&, bool, WebKit::WebFramePolicyListenerProxy&)::$_0::operator()(SSBLookupResult*, NSError*)::'lambda'()::operator()() const
Dawn Morningstar
Comment 3 2024-09-25 21:35:26 PDT
EWS
Comment 4 2024-09-25 21:38:03 PDT
Test gardening commit 284263@main (1d9b6f16bb5a): <https://commits.webkit.org/284263@main> Reviewed commits have been landed. Closing PR #34283 and removing active labels.
Chris Dumez
Comment 5 2024-10-01 13:15:29 PDT
EWS
Comment 6 2024-10-01 16:38:40 PDT
Committed 284522@main (4c6b9faccbfd): <https://commits.webkit.org/284522@main> Reviewed commits have been landed. Closing PR #34520 and removing active labels.
EWS
Comment 7 2024-10-02 09:14:29 PDT
Test gardening commit 283286.177@safari-7620-branch (54010e720fcb): <https://commits.webkit.org/283286.177@safari-7620-branch> Reviewed commits have been landed. Closing PR #1955 and removing active labels.
Dawn Morningstar
Comment 8 2024-10-03 12:11:48 PDT
Dawn Morningstar
Comment 9 2024-10-04 01:46:23 PDT
EWS
Comment 10 2024-10-04 01:50:17 PDT
Test gardening commit 284668@main (8f6573c2a183): <https://commits.webkit.org/284668@main> Reviewed commits have been landed. Closing PR #34687 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.