REGRESSION(282394@main): [ Ventura ] Flaky ASSERTION FAILED: !users.contains(pageID) on TestWebKitAPI.ProcessSwap.ConcurrentHistoryNavigations https://bugs.webkit.org/show_bug.cgi?id=280371 <rdar://136716513>

Reviewed by Ben Nham.

The test would start a cross-site provisional load while a previous cross-site provisional
load was already going on. This meant that WebPageProxy::m_provisionalPage was already
set when constructing a new ProvisionalPageProxy object. As a result, we would temporarily
have 2 ProvisionalPageProxy for the same page and using the same process. This would cause
us to hit an assertion in WebProcessProxy::addVisitedLinkStoreUser() because the page is
already registered.

To address the issue, make sure the previous ProvisionalPageProxy object gets destroyed
*before* we construct the new one.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::continueNavigationInNewProcess):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:
((ProcessSwap, ConcurrentHistoryNavigations)):
((ProcessSwap, DISABLED_ConcurrentHistoryNavigations)(ProcessSwap, ConcurrentHistoryNavigations)): Deleted.

Canonical link: https://commits.webkit.org/284522@main